--- a/techflash/tsconfig.base.json
+++ b/techflash/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@techflash/sandbox": ["apps/techflash/modules/sandbox/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
