--- a/techflash/.prettierrc
+++ b/techflash/.prettierrc
@@ -1,21 +1,39 @@
 {
-	"$schema": "http://json.schemastore.org/prettierrc",
+	"$schema": "https://json.schemastore.org/prettierrc",
+	"plugins": ["prettier-plugin-multiline-arrays"],
+	"multilineArraysWrapThreshold": 2,
 	"singleQuote": true,
-	"trailingComma": "all",
 	"printWidth": 100,
 	"singleAttributePerLine": true,
-	"arrowParens": "always",
+	"bracketSameLine": true,
 	"endOfLine": "lf",
 	"useTabs": true,
+	"htmlWhitespaceSensitivity": "ignore",
 	"bracketSpacing": true,
-	"quoteProps": "as-needed",
+"quoteProps": "as-needed",
 	"tabWidth": 2,
-
 	"overrides": [
+		{
+			"files": "*.spec.ts",
+			"options": {
+				"printWidth": 120,
+				"arrowParens": "avoid"
+			}
+		},
 		{
 			"files": "*.json",
 			"options": {
-				"printWidth": 200
+				"printWidth": 120,
+				"arrowParens": "avoid",
+				"trailingComma": "all"
+			}
+		},
+		{
+			"files": "*.mjs",
+			"options": {
+				"printWidth": 120,
+				"arrowParens": "avoid",
+				"trailingComma": "all"
 			}
 		}
 	]
