--- a/techflash/nx.json
+++ b/techflash/nx.json
@@ -2,7 +2,10 @@
 	"$schema": "./node_modules/nx/schemas/nx-schema.json",
 	"defaultBase": "master",
 	"namedInputs": {
-		"default": ["{projectRoot}/**/*", "sharedGlobals"],
+		"default": [
+			"{projectRoot}/**/*",
+			"sharedGlobals"
+		],
 		"production": [
 			"default",
 			"!{projectRoot}/.eslintrc.json",
@@ -18,16 +21,30 @@
 	"targetDefaults": {
 		"@angular-devkit/build-angular:application": {
 			"cache": true,
-			"dependsOn": ["^build"],
-			"inputs": ["production", "^production"]
+			"dependsOn": [
+				"^build"
+			],
+			"inputs": [
+				"production",
+				"^production"
+			]
 		},
 		"@nx/eslint:lint": {
 			"cache": true,
-			"inputs": ["default", "{workspaceRoot}/.eslintrc.json", "{workspaceRoot}/.eslintignore", "{workspaceRoot}/eslint.config.mjs"]
+			"inputs": [
+				"default",
+				"{workspaceRoot}/.eslintrc.json",
+				"{workspaceRoot}/.eslintignore",
+				"{workspaceRoot}/eslint.config.mjs"
+			]
 		},
 		"@nx/jest:jest": {
 			"cache": true,
-			"inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"],
+			"inputs": [
+				"default",
+				"^production",
+				"{workspaceRoot}/jest.preset.js"
+			],
 			"options": {
 				"passWithNoTests": true
 			},
@@ -39,12 +56,19 @@
 			}
 		},
 		"e2e-ci--**/*": {
-			"dependsOn": ["^build"]
+			"dependsOn": [
+				"^build"
+			]
 		},
 		"@nx/esbuild:esbuild": {
 			"cache": true,
-			"dependsOn": ["^build"],
-			"inputs": ["production", "^production"]
+			"dependsOn": [
+				"^build"
+			],
+			"inputs": [
+				"production",
+				"^production"
+			]
 		}
 	},
 	"plugins": [
