--- a/techflash/tsconfig.base.json
+++ b/techflash/tsconfig.base.json
@@ -10,14 +10,24 @@
 		"importHelpers": true,
 		"target": "ESNext",
 		"module": "esnext",
-		"lib": ["ESNext", "dom"],
+		"lib": [
+			"ESNext",
+			"dom"
+		],
 		"skipLibCheck": true,
 		"skipDefaultLibCheck": true,
 		"baseUrl": ".",
 		"paths": {
-			"@techflash/sandbox": ["apps/techflash/modules/sandbox/src/index.ts"],
-			"@techflash/shared-ui": ["apps/techflash/modules/shared/shared-ui/src/index.ts"]
+			"@techflash/sandbox": [
+				"apps/techflash/modules/sandbox/src/index.ts"
+			],
+			"@techflash/shared-ui": [
+				"apps/techflash/modules/shared/shared-ui/src/index.ts"
+			]
 		}
 	},
-	"exclude": ["node_modules", "tmp"]
+	"exclude": [
+		"node_modules",
+		"tmp"
+	]
 }
