--- a/nx.json
+++ b/nx.json
@@ -69,6 +69,16 @@
 				"production",
 				"^production"
 			]
+		},
+		"@nx/js:tsc": {
+			"cache": true,
+			"dependsOn": [
+				"^build"
+			],
+			"inputs": [
+				"production",
+				"^production"
+			]
 		}
 	},
 	"plugins": [
