--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"eslint-plugin-playwright": "^1.6.2",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jest-environment-node": "^29.7.0",
 		"jest-preset-angular": "~14.4.0",
 		"nx": "20.4.6",
 		"prettier": "^3.5.3",
