--- a/package.json
+++ b/package.json
@@ -5,42 +5,42 @@
 	"scripts": {},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~19.1.0",
-		"@angular/cdk": "^19.2.1",
-		"@angular/common": "~19.1.0",
-		"@angular/compiler": "~19.1.0",
-		"@angular/core": "~19.1.0",
-		"@angular/forms": "~19.1.0",
-		"@angular/material": "^19.2.1",
-		"@angular/platform-browser": "~19.1.0",
-		"@angular/platform-browser-dynamic": "~19.1.0",
-		"@angular/router": "~19.1.0",
+		"@angular/animations": "19.2.1",
+		"@angular/cdk": "19.2.2",
+		"@angular/common": "19.2.1",
+		"@angular/compiler": "19.2.1",
+		"@angular/core": "19.2.1",
+		"@angular/forms": "19.2.1",
+		"@angular/material": "19.2.2",
+		"@angular/platform-browser": "19.2.1",
+		"@angular/platform-browser-dynamic": "19.2.1",
+		"@angular/router": "19.2.1",
 		"express": "^4.21.2",
 		"rxjs": "~7.8.0",
 		"zone.js": "~0.15.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~19.1.0",
-		"@angular-devkit/core": "~19.1.0",
-		"@angular-devkit/schematics": "~19.1.0",
-		"@angular/cli": "~19.1.0",
-		"@angular/compiler-cli": "~19.1.0",
-		"@angular/language-service": "~19.1.0",
+		"@angular-devkit/build-angular": "19.2.1",
+		"@angular-devkit/core": "19.2.1",
+		"@angular-devkit/schematics": "19.2.1",
+		"@angular/cli": "~19.2.0",
+		"@angular/compiler-cli": "19.2.1",
+		"@angular/language-service": "19.2.1",
 		"@eslint/js": "^9.8.0",
-		"@nx/angular": "20.4.6",
-		"@nx/devkit": "20.4.6",
-		"@nx/esbuild": "20.4.6",
-		"@nx/eslint": "20.4.6",
-		"@nx/eslint-plugin": "20.4.6",
-		"@nx/express": "^20.4.6",
-		"@nx/jest": "20.4.6",
-		"@nx/js": "20.4.6",
-		"@nx/node": "20.4.6",
-		"@nx/playwright": "20.4.6",
-		"@nx/web": "20.4.6",
-		"@nx/workspace": "20.4.6",
+		"@nx/angular": "20.5.0",
+		"@nx/devkit": "20.5.0",
+		"@nx/esbuild": "20.5.0",
+		"@nx/eslint": "20.5.0",
+		"@nx/eslint-plugin": "20.5.0",
+		"@nx/express": "20.5.0",
+		"@nx/jest": "20.5.0",
+		"@nx/js": "20.5.0",
+		"@nx/node": "20.5.0",
+		"@nx/playwright": "20.5.0",
+		"@nx/web": "20.5.0",
+		"@nx/workspace": "20.5.0",
 		"@playwright/test": "^1.36.0",
-		"@schematics/angular": "~19.1.0",
+		"@schematics/angular": "19.2.1",
 		"@swc-node/register": "~1.9.1",
 		"@swc/core": "~1.5.7",
 		"@swc/helpers": "~0.5.11",
@@ -48,7 +48,7 @@
 		"@types/jest": "^29.5.12",
 		"@types/node": "18.16.9",
 		"@typescript-eslint/utils": "^8.19.0",
-		"angular-eslint": "^19.0.2",
+		"angular-eslint": "19.2.1",
 		"esbuild": "^0.19.2",
 		"eslint": "^9.8.0",
 		"eslint-config-prettier": "^9.0.0",
@@ -57,7 +57,7 @@
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-environment-node": "^29.7.0",
 		"jest-preset-angular": "~14.4.0",
-		"nx": "20.4.6",
+		"nx": "20.5.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-multiline-arrays": "^4.0.2",
 		"ts-jest": "^29.1.0",
